NetworkPoliciesCKA/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netpolicy-frontend-deploy
  name: netpolicy-frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netpolicy-frontend-deploy
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: netpolicy-frontend-deploy
    spec:
      containers:
      - image: docker-registry:5000/fedora:39
        name: netpolicy-frontend-deploy
        command: ["sleep", "infinity"]
