NetworkPoliciesCKA/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: netpolicy-db-deploy
  name: netpolicy-db-deploy
spec:
  ports:
  - port: 5000 
    protocol: TCP
    targetPort: 5000
  selector:
    app: netpolicy-db-deploy
status:
  loadBalancer: {}
